# fitting-room-model-service

./: Dockerfile  app.py  hello.py  pyproject.toml  requirements.txt
src/: call_out.py  config.py  controller.py  csm.py  image_preprocessing.py  pocketbase.py  pose_estimate_module.py
